@@ -23,10 +23,6 @@ import xbmc, xbmcaddon, xbmcplugin, xbmcgui, xbmcvfs
 import os, json
 from .init import syshandle
 
-try:
-    base_string = basestring
-except:
-    base_string = str
 
 integer = 1000
 lang = xbmcaddon.Addon().getLocalizedString
@@ -106,14 +102,17 @@ def infoDialog(message, heading=addonInfo('name'), icon='', time=3000):
 
 
 def okDialog(heading, line1):
+
     return dialog.ok(heading, line1)
 
 
 def yesnoDialog(line1, line2='', line3='', heading=addonInfo('name'), nolabel=None, yeslabel=None):
+
     return dialog.yesno(heading, line1, line2, line3, nolabel, yeslabel)
 
 
 def selectDialog(list, heading=addonInfo('name')):
+
     return dialog.select(heading, list)
 
 
@@ -150,19 +149,23 @@ def openPlaylist():
 
 
 def refresh():
+
     return execute('Container.Refresh')
 
 
 def idle():
+
     return execute('Dialog.Close(busydialog)')
 
 
 def set_view_mode(vmid):
+
     return execute('Container.SetViewMode({0})'.format(vmid))
 
 
 # for compartmentalized theme addons
 def addonmedia(icon, addonid=addonInfo('id'), theme=None, media_subfolder=True):
+
     if not theme:
         return join(addon(addonid).getAddonInfo('path'), 'resources', 'media' if media_subfolder else '', icon)
     else:
@@ -282,6 +285,11 @@ def json_rpc(command):
 
     # This function was taken from tknorris's kodi.py
 
+    try:
+        base_string = basestring
+    except BaseException:
+        base_string = str
+
     if not isinstance(command, base_string):
         command = json.dumps(command)
     response = jsonrpc(command)
@@ -329,9 +337,48 @@ def addon_details(addon_id, fields=None):
 
 
 def enable_addon(addon_id, enable=True):
+    
+    """Enable/Disable an addon via json-rpc"""
 
     command = {
         "jsonrpc":"2.0", "method": "Addons.SetAddonEnabled", "params": {"addonid": addon_id, "enabled": enable}, "id": 1
     }
 
     json_rpc(command)
+
+
+def set_a_setting(_setting_, value):
+    
+    """Change a gui setting via json-rpc"""
+
+    json_cmd = {
+        "jsonrpc": "2.0", "method": "Settings.SetSettingValue", "params": {"setting": _setting_, "value": value}, "id": 1
+    }
+
+    json_rpc(json_cmd)
+
+
+def get_a_setting(_setting_):
+    
+    """Return the state of a gui setting as dictionary"""
+
+    json_cmd = {
+        "jsonrpc": "2.0", "method": "Settings.GetSettingValue", "params": {"setting": _setting_}, "id": 1
+    }
+
+    return json_rpc(json_cmd)
+
+
+def bool_skin_setting(setting_id):
+
+    return bool(condVisibility('Skin.HasSetting({0})'.format(setting_id)))
+
+
+def set_skin_setting(setting_id, state='true'):
+
+    return execute('Skin.SetBool({0},{1})'.format(setting_id, state))
+
+
+def quit_kodi():
+
+    execute('Quit')
